--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		
 		<mockito.version>3.0.0</mockito.version>
 		<ascii-renderer.version>2.1.0</ascii-renderer.version>
-		
+
 		<google-truth.version>1.0</google-truth.version>
 		<junit.version>5.5.0</junit.version>
 		
@@ -34,9 +34,10 @@
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
 		<maven-war-plugin.version>3.2.2</maven-war-plugin.version>
+		<jqwik.version>1.1.6</jqwik.version>
+		<assertj.version>3.12.2</assertj.version>
 		<owasp-dependency-check.version>5.0.0</owasp-dependency-check.version>
 		<pitest.version>1.4.8</pitest.version>
-		
 	</properties>
 	
 	<licenses>
@@ -112,13 +113,13 @@
 		<dependency>
 			<groupId>net.jqwik</groupId>
 			<artifactId>jqwik</artifactId>
-			<version>1.1.6</version>
+			<version>${jqwik.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
-			<version>3.12.2</version>
+			<version>${assertj.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -282,6 +283,10 @@
 	</distributionManagement>
 
 	<repositories>
+		<repository>
+			<id>mavenCentral</id>
+			<url>https://repo1.maven.org/maven2</url>
+		</repository>
 		<repository>
 			<id>indvd00m-github-repo</id>
 			<url>https://github.com/indvd00m/maven-repo/raw/master/repository</url>
