--- a/jmh/pom.xml
+++ b/jmh/pom.xml
@@ -10,6 +10,10 @@
     <name>JMH</name>
     <description>JMH Benchmarks for 3D bin container packaging</description>
     <dependencies>
+		<dependency>
+			<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
+			<artifactId>core</artifactId>
+		</dependency>    
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
@@ -19,6 +23,7 @@
             <artifactId>jmh-generator-annprocess</artifactId>
             <scope>provided</scope>
         </dependency>
+        
     </dependencies>
     
     <build>
