--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.2.10-SNAPSHOT</version>
+		<version>1.2.10</version>
 	</parent>
 	<artifactId>core</artifactId>
 
