--- a/core/pom.xml
+++ b/core/pom.xml
@@ -112,6 +112,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc-plugin.version}</version>
 			</plugin>
 		</plugins>
 	</build>
