--- a/core/pom.xml
+++ b/core/pom.xml
@@ -103,12 +103,15 @@
 			<plugin>
 				<groupId>org.moditect</groupId>
 				<artifactId>moditect-maven-plugin</artifactId>
-			</plugin>
-			
+			</plugin>			
 			<plugin>
 				<groupId>org.pitest</groupId>
 				<artifactId>pitest-maven</artifactId>
-			</plugin>			
+			</plugin>
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 </project>
