--- a/extreme-points/pom.xml
+++ b/extreme-points/pom.xml
@@ -96,6 +96,10 @@
 				<groupId>org.moditect</groupId>
 				<artifactId>moditect-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 </project>
