--- a/jmh/pom.xml
+++ b/jmh/pom.xml
@@ -100,7 +100,11 @@
 				<configuration>
 					<skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
 				</configuration>
-			</plugin>			
+			</plugin>
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 </project>
