--- a/visualizer/algorithm/pom.xml
+++ b/visualizer/algorithm/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.github.skjolber.3d-bin-container-packing</groupId>
 		<artifactId>parent</artifactId>
-		<version>3.0.6-SNAPSHOT</version>
+		<version>3.0.6</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>visualizer-algorithm</artifactId>
